Alignment issues fixed and some changes made

--- a/styles/sign-in.css
+++ b/styles/sign-in.css
@@ -13,15 +13,12 @@ html {
 
 body {
     background: url("../images/main-white-bg.jpg");
-    height: 100%;
+    height: 100vh;
     background-position: center;
     background-size: cover;
-}
-
-.login-form {
     display: flex;
     justify-content: center;
-    margin-top: 110px;
+    align-items: center;
 }
 
 .login-container {
@@ -134,53 +131,8 @@ body {
     text-decoration: underline;
 }
 
-@media only screen and (max-width: 786px) {
-    .nav-button {
-        display: none;
-    }
-    .nav-menu.responsive {
-        top: 100px;
-    }
-    .nav-menu {
-        position: absolute;
-        top: -800px;
-        display: flex;
-        justify-content: center;
-        background: rgba(255, 255, 255, 0.2);
-        width: 100%;
-        height: 90vh;
-        backdrop-filter: blur(20px);
-        transition: .3s;
-    }
-    .nav-menu ul {
-        flex-direction: column;
-        text-align: center;
-    }
-    .nav-menu-btn {
-        display: block;
-    }
-    .nav-menu-btn i {
-        font-size: 25px;
-        color: #fff;
-        padding: 10px;
-        background: rgba(255, 255, 255, 0.2);
-        border-radius: 50%;
-        cursor: pointer;
-        transition: .3s;
-    }
-    .nav-menu-btn i:hover {
-        background: rgba(255, 255, 255, 0.15);
-    }
-}
-
-@media (min-height: 800px) and (max-height: 1000px) {
-    .login-form {
-        margin-top: 195px;
-    }
-}
-
-@media (min-height: 1001px) {
-    .login-form {
-        margin-top: 205px;
+@media (max-width: 520px) {
+    .login-container {
+        width: 460px;
     }
 }
