--- a/styles/sign-up.css
+++ b/styles/sign-up.css
@@ -13,15 +13,12 @@ html {
 
 body {
     background: url("../images/main-white-bg.jpg");
-    height: 100%;
+    height: 100vh;
     background-position: center;
     background-size: cover;
-}
-
-.register-form {
     display: flex;
     justify-content: center;
-    margin-top: 50px;
+    align-items: center;
 }
 
 .register-container {
@@ -131,53 +128,20 @@ body {
     gap: 5px;
 }
 
-@media only screen and (max-width: 786px) {
-    .nav-button {
-        display: none;
-    }
-    .nav-menu.responsive {
-        top: 100px;
-    }
-    .nav-menu {
-        position: absolute;
-        top: -800px;
-        display: flex;
-        justify-content: center;
-        background: rgba(255, 255, 255, 0.2);
-        width: 100%;
-        height: 90vh;
-        backdrop-filter: blur(20px);
-        transition: .3s;
-    }
-    .nav-menu ul {
-        flex-direction: column;
-        text-align: center;
-    }
-    .nav-menu-btn {
-        display: block;
-    }
-    .nav-menu-btn i {
-        font-size: 25px;
-        color: #fff;
-        padding: 10px;
-        background: rgba(255, 255, 255, 0.2);
-        border-radius: 50%;
-        cursor: pointer;
-        transition: .3s;
-    }
-    .nav-menu-btn i:hover {
-        background: rgba(255, 255, 255, 0.15);
+@media (min-width: 400px) {
+    .register-container {
+        width: 480px;
     }
 }
 
-@media (min-height: 800px) and (max-height: 1000px) {
-    .register-form {
-        margin-top: 145px;
+@media (min-width: 550px) and (max-width: 579.99px) {
+    .register-container {
+        width: 535px;
     }
 }
 
-@media (min-height: 1001px) {
-    .register-form {
-        margin-top: 155px;
+@media (min-width: 580px) and (max-width: 610px) {
+    .register-container {
+        width: 570px;
     }
 }
